# fearless_simd

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: sigmoid.rs  sinewave.rs
examples/: fast_detect.rs  iir.rs  macro.rs  macros.rs  play.rs  sinewave.rs  srgb.rs  token.rs  unpremul.rs
fearless_simd/: Cargo.toml
fearless_simd/examples/: play.rs  sigmoid.rs  srgb.rs
fearless_simd/src/: aarch64.rs  fallback.rs  generated.rs  half_assed.rs  impl_macros.rs  lib.rs  macros.rs  ops.rs  traits.rs  wasm32.rs  x86_64.rs
fearless_simd/src/core_arch/: fallback.rs  mod.rs
fearless_simd/src/core_arch/aarch64/: fp16.rs  mod.rs
fearless_simd/src/core_arch/x86_64/: avx.rs  avx2.rs  sse.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
fearless_simd/src/x86_64/: avx2.rs
fearless_simd_gen/: Cargo.toml
fearless_simd_gen/src/: arch.rs  generic.rs  main.rs  mk_fallback.rs  mk_neon.rs  mk_ops.rs  mk_simd_trait.rs  mk_simd_types.rs  mk_wasm.rs  mk_wasm_simd128.rs  ops.rs  types.rs
fearless_simd_gen/src/arch/: fallback.rs  mod.rs  neon.rs  wasm.rs
fearless_simd_macro/: Cargo.toml
fearless_simd_macro/src/: lib.rs
fearless_simd_tests/: Cargo.toml  README.md
fearless_simd_tests/tests/: mod.rs  wasm.rs
src/: aarch64.rs  avx.rs  avx2.rs  base.rs  combinators.rs  detect.rs  fallback.rs  half_assed.rs  impl_macros.rs  lib.rs  macros.rs  neon.rs  neon_f16.rs  ops.rs  simd_dispatch.rs  sse42.rs  token.rs  traits.rs  x86.rs  x86_64.rs
src/aarch64/: fp16.rs  neon.rs
src/avx2/: f32_4.rs  mask32_4.rs
src/base/: f16.rs
src/core_arch/: mod.rs
src/core_arch/aarch64/: fp16.rs  mod.rs
src/core_arch/x86_64/: avx.rs  avx2.rs  fma.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
src/fallback/: f32_4.rs
src/neon/: f16_4.rs  f16_8.rs  f32_4.rs  mask16_4.rs  mask16_8.rs  mask32_4.rs  u32_4.rs
src/x86_64/: avx2.rs
unstoppable/: LICENSE-APACHE-UNST
unstoppable/fearmore/: relaxations.rs
