[package]
name = "fearless_simd"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"
rust-version = "1.85"

[features]
safe_wrappers = []
default = ["std"]
std = []
libm = ["dep:libm"]

[dependencies]
bytemuck = "1.23.0"
libm = { version = "0.2.15", optional = true }
half = { version = "2.4.1", optional = true }
