[package]
name = "fearless_simd_gen"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"
rust-version = "1.85"
publish = false

[dependencies]
proc-macro2 = "1.0.94"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0.40"
prettyplease = "0.2.31"
clap = { version = "4.5.39", features = ["derive"] }
