[package]
name = "fearless_simd_macro"
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full", "extra-traits", "visit-mut"] }
